manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: idletekz/sample-api:latest
        name: frontend
        resources: {}
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /opt/config.json
          subPath: config.json
      volumes:
      - name: config-volume
        configMap:
          name: redis-config
