manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-svc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis-svc
spec:
  ports:
  - port: 6379
  selector:
    app: redis
