manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: frondend-svc
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-svc
            port:
              number: 80
